apps/frontend/aws/vpc.cfn.yaml
Parameters:
    VPCName:
        Description: Parameter to tag the name of my VPC
        Type: String

Resources:
    VPC:
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: 10.0.0.0/16
            EnableDnsSupport: true
            EnableDnsHostnames: true
            Tags:
                - Key: Name
                  Value: !Ref VPCName

    InternetGateway:
        Type: AWS::EC2::InternetGateway

    InternetGatewayAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            InternetGatewayId: !Ref InternetGateway
            VpcId: !Ref VPC

    PublicSubnet:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [0, !GetAZs '']
            CidrBlock: 10.0.0.0/24

    PrivateSubnetInternetEnabled:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [1, !GetAZs '']
            CidrBlock: 10.0.1.0/24

    RouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC

    InternetRoute:
        Type: AWS::EC2::Route
        DependsOn: InternetGatewayAttachment
        Properties:
            RouteTableId: !Ref RouteTable
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref InternetGateway

    PublicSubnetToRouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref RouteTable
            SubnetId: !Ref PublicSubnet

    NatGatewayElasticIP:
        Type: AWS::EC2::EIP
        DependsOn: InternetGatewayAttachment
        Properties:
            Domain: vpc

    NatGateway:
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId: !GetAtt NatGatewayElasticIP.AllocationId
            SubnetId: !Ref PublicSubnet

    NatRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC

    NatRoute:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref NatRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway

    NatRouteToNatRouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref NatRouteTable
            SubnetId: !Ref PrivateSubnetInternetEnabled

Outputs:
    VPCId:
        Value: !GetAtt VPC.VpcId
        Description: The ID of the VPC
    PublicSubnetId:
        Value: !GetAtt PublicSubnet.SubnetId
        Description: The public subnet ID
    PrivateSubnetId:
        Value: !GetAtt PrivateSubnetInternetEnabled.SubnetId
        Description: The private subnet ID
